(fix) navbar sometimes overlapped content. fixed.
- added 50px top-padding to the first <div> after <body> tag

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -53,6 +53,10 @@ html, .container-fluid {
   font-family: 'Lato', sans-serif;
 }
 
+body > div:first-of-type {
+  padding-top: 50px;
+}
+
 .profile-view {
   margin-top: 40px;
 }
